# pomodoro-watch-backend-rust

./: .env.template  .gitignore  Cargo.toml  Docs.md  LICENSE  README.md
migrations/: 20240108021928_create-user-information-table.sql  20240108024755_add_time_stamp_to_user_information_table.sql  20240126215211_create_otp_table.sql  20240126230116_add_is_verified_to_user_information_table.sql  20240126231805_drop_fk_on_otp_table.sql  20240126232016_add_new_column_to_user.sql  20240127080854_rename_otp.sql  20240127081147_update_fkn_on_users_table.sql
src/: main.rs  pkg.rs  router.rs
src/database/: mod.rs  models.rs
src/database/models/: otp.rs  user.rs
src/handlers/: auth.rs  auth_handlers.rs  health_check.rs  mod.rs  pomodoro.rs  user.rs
src/pkg/: api.rs  email_templates.rs  http_request.rs  http_response.rs  jwt.rs  mailer.rs  mod.rs
