[package]
name = "pomodoro-backend-rust"
version = "0.1.0"
edition = "2021"
author= ["adeoye adefemi <adefemiadeoye@yahoo.com>"]

[dependencies]
shuttle-axum = "0.37.0"
shuttle-runtime = "0.37.0"
tracing = "0.1.40"
dotenv = "0.15.0"
fred = "7.1.0"
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres", "uuid"] }
shuttle-shared-db = { version = "0.37.0", features = ["postgres", "sqlx"] }
uuid = "1.6.1"
bcrypt = "0.15.0"
lettre = "0.11.3"
serde_json = "1.0.111"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum = { version = "0.7.4" }
async-traits = "0.0.0"
